# kin-rust-obsolete

./: Cargo.toml  LICENSE  README.md  build.rs
src/: error.rs  lib.rs  mod.rs  utils.rs
src/client/: account_resolution.rs  client.rs  environment.rs  mod.rs  payment_submission.rs
src/client/internal/: account.rs  airdrop.rs  mod.rs  transaction.rs
src/key/: private.rs  public.rs
src/model/: invoice.rs  memo.rs  mod.rs  payment.rs  transaction.rs  transaction_type.rs
src/solana/: commitment.rs  mod.rs
src/solana/memo/: program.rs
src/solana/token/: instruction.rs  program.rs
