[package]
name = "kin-rust"
version = "0.1.0"
edition = "2018"

[dependencies]

# Key pair.
ed25519-compact = "1.0.0"
bs58 = "0.4.0"

# gRPC.
tonic = { version = "0.6.1", features = ["tls", "tls-roots"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
prost = "0.9.0"
prost-types = "0.9.0"

# Solana.
solana-sdk = "1.8.5"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"

# Stellar.
substrate-stellar-sdk = "0.2.2"

# Error Handling.
thiserror = "1.0.30"

num-traits = "0.2.14"
num-derive = "0.3.3"
base64 = "0.13.0"
bincode = "1.3.3"
rust_decimal = "1.17.0"
sha2 = "0.9.8"

[build-dependencies]
tonic-build = "0.6.0"